<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_alignParentLeft="false" android:padding="5dp"
                                             android:layout_alignParentStart="false">

    <TextView
            android:text="@string/textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_engine"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_name" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/imageView_image"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:paddingBottom="5dp" android:paddingTop="5dp"/>
    <TextView
            android:id="@+id/textView_name"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:text="@string/video_title"
            android:textSize="18sp"
            android:textStyle="bold" tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/imageView_image"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@color/colorPrimary"/>
    <ImageView
            android:id="@+id/imageView_image"
            android:layout_width="78dp"
            android:layout_height="125dp"
            app:srcCompat="@drawable/defaultpic"
            android:contentDescription="@string/todo"
            tools:layout_editor_absoluteX="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" tools:ignore="MissingConstraints"/>
</android.support.constraint.ConstraintLayout>
